<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".checkActivity">

    <LinearLayout
        android:id="@+id/checkAct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_body"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_red"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:padding="10dp"
            android:layout_margin="7dp"
            android:textSize="20dp"
            android:text="@string/loss_0"/>
        <TextView
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:layout_margin="7dp"
            android:layout_below="@id/loss"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/wins_0"/>
        <TextView
            android:id="@+id/optimalTrials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_margin="7dp"
            android:layout_alignParentRight="true"
            android:text="@string/optimal_trials"/>
        <TextView
            android:id="@+id/trialsOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_margin="7dp"
            android:layout_below="@id/optimalTrials"
            android:text="@string/trials_over_0"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_red"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/enterGuess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_guess"
            android:background="@drawable/round_text"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/guessNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:inputType="number"
            android:background="@drawable/round_text"
            android:hint="@string/_1_100"/>

        <TextView
            android:id="@+id/lastGuess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="Last Guess: "/>

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button"
            android:text="@string/check"/>

    </LinearLayout>

</LinearLayout>
</LinearLayout>