<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_body"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="90dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dark_red"
            android:layout_weight="2"
            android:layout_margin="15dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_number_to_guess"
                android:background="@drawable/round_text"
                android:textColor="#f5f5dc"
                android:textStyle="bold"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textSize="30sp"
                 />


            <EditText
                android:id="@+id/orgNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="7dp"
                android:textSize="30dp"
                android:inputType="number"
                android:textColor="#f5f5dc"
                android:background="@drawable/round_text"
                android:hint="@string/_1_100"/>

            <Button
                android:id="@+id/guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#f5f5dc"
                android:background="@drawable/round_button"
                android:text="@string/guess"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="@color/dark_red"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="#00FF00"
                android:background="@drawable/round_text"
                android:textSize="25sp"
                android:text="@string/wins_0"/>
            <TextView
                android:id="@+id/loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:text="@string/loss_0"/>
        </LinearLayout>
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:textColor="#f5f5dc"
            android:text="@string/reset"/>


    </LinearLayout>


